--- a/northwind/dbt_project.yml
+++ b/northwind/dbt_project.yml
@@ -33,11 +33,16 @@ models:
   northwind:
     # Config indicated by + and applies to all files under models/example/
     raw:
+      +tags: "tabela_critica"
       +materialized: view
+      +docs:
+        node_color: "#cd7f32"
     staging:
       +materialized: view
-    intermediate:
-      +materialized: view
-    marts:
+      +docs:
+        node_color: "#c0c0c0"
+    reports:
       +schema: "gold" 
       +materialized: table
+      +docs:
+        node_color: "#e6b530"
